# cv-maker

./: Cargo.toml  README.adoc  askama.toml
src/: askama_escaper.rs  latex_template.rs  lib.rs  main.rs
templates/latex/autumn_leaves/: languages.tex  main_document.tex  section.tex  studies.tex  title.tex  tools.tex  work.tex  works.tex
