[package]
name = "cv_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_escape = "0.10.3"
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
# tower = "0.4.13"
# tower-http = { version = "0.5.0", features = ["fs"]}}
